# sdl_gpu_by_example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: generate.yaml
Assets/Shaders/: .gitignore
CMake/: Helpers.cmake
code/: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  diff.py
code/Assets/: Attributions.md
code/CMake/: Helpers.cmake  TopLevel.cmake
code/source/: CMakeLists.txt
code/source/001_Introduction_and_the_Template/: 001_Introduction_and_the_Template.c  CMakeLists.txt
code/source/001_Introduction_and_the_Template/Shaders/: .gitignore
code/source/002_Window_and_Clearing/: 002_Window_and_Clearing.c  CMakeLists.txt
code/source/003_Triangle/: 003_Triangle.c  CMakeLists.txt
code/source/003_Triangle/Shaders/: Triangle.vert.hlsl
code/source/003_Triangle_and_Fullscreen_Triangle/: 003_Triangle_and_Fullscreen_Triangle.c  CMakeLists.txt
code/source/003_Triangle_and_Fullscreen_Triangle/Shaders/: FullscreenTriangle.frag.hlsl  FullscreenTriangle.vert.hlsl  Triangle.vert.hlsl
code/source/004_Uniform_Buffers/: 004_Uniform_Buffers.c  CMakeLists.txt
code/source/004_Uniform_Buffers/Shaders/: FullscreenTriangle.frag.hlsl  Triangle.frag.hlsl  Triangle.vert.hlsl  UniformFullscreenTriangle.frag.hlsl  UniformFullscreenTriangle.vert.hlsl  UniformTriangle.vert.hlsl
code/source/004_Uniform_Buffers_and_Fullscreen_Triangle/: 004_Uniform_Buffers_and_Fullscreen_Triangle.c  CMakeLists.txt
code/source/004_Uniform_Buffers_and_Fullscreen_Triangle/Shaders/: FullscreenTriangle.frag.hlsl  FullscreenTriangle.vert.hlsl
code/source/005_Quads_and_Textures/: 005_Quads_and_Textures.c  CMakeLists.txt
code/source/005_Quads_and_Textures/Shaders/: Quad.vert.hlsl
code/source/006_The_Object_to_NDC_Pipeline/: 006_The_Object_to_NDC_Pipeline.c  CMakeLists.txt
code/source/006_The_Object_to_NDC_Pipeline/Shaders/: TransformedQuad.vert.hlsl
code/source/007_The_Cube/: 007_The_Cube.c  CMakeLists.txt
code/source/007_The_Cube/Shaders/: Cube.vert.hlsl
code/source/007_The_Cube_and_Depth/: 007_The_Cube_and_Depth.c  CMakeLists.txt
code/source/007_The_Cube_and_Depth/Shaders/: Cube.frag.hlsl  Cube.vert.hlsl
code/source/007_The_Cube_and_Math/: 007_The_Cube_and_Math.c  CMakeLists.txt
code/source/007_The_Cube_and_Math/Shaders/: Cube.frag.hlsl  Cube.vert.hlsl
code/source/008_Depth/: 008_Depth.c  CMakeLists.txt
code/source/008_Depth/Shaders/: Depth.frag.hlsl  Depth.vert.hlsl
code/source/009_Vertex_and_Index_Buffers/: 009_Vertex_and_Index_Buffers.c  009_Vertex_and_Index_Buffers.c.bak  CMakeLists.txt
code/source/009_Vertex_and_Index_Buffers/Shaders/: VertexAndIndexBuffer.frag.hlsl  VertexAndIndexBuffer.vert.hlsl
code/source/010_3D_Cameras/: 010_3D_Cameras.c  CMakeLists.txt
code/source/010_3D_Cameras/Shaders/: VertexAndIndexBuffer.vert.hlsl
code/source/010_An_FPS_Camera/: 010_An_FPS_Camera.c  CMakeLists.txt
code/source/010_An_FPS_Camera/Shaders/: VertexAndIndexBuffer.frag.hlsl
code/source/011_Renderer_and_GPU/: 011_Renderer_and_GPU.c  CMakeLists.txt
code/source/014_GLTF/: 014_GLTF.c  CMakeLists.txt
code/source/014_GLTF/Shaders/: VertexAndIndexBuffer.frag.hlsl  VertexAndIndexBuffer.vert.hlsl
code/tools/: .gitignore
scripts/: run_examples_on_ci.py
site/content/: About.md  Index.md  Resources.md  VSCodeAndC.md  index.md
site/content/lessons/: 001_Introduction_and_the_Template.md  002_Window_and_Clearing.md  003_Triangle.md  003_Triangle_and_Fullscreen_Triangle.md  004_Uniform_Buffers.md  004_Uniform_Buffers_and_Fullscreen_Triangle.md  005_Quads_and_Textures.md  006_The_Object_to_NDC_Pipeline.md  007_The_Cube.md  007_The_Cube_and_Depth.md  007_The_Cube_and_Math.md  008_Depth.md  009_Vertex_and_Index_Buffers.md  010_3D_Cameras.md  010_A_Model.md  010_An_FPS_Camera.md  011_A_Skybox_and_Skysphere.md  012_A_Simple_Model.md  012_A_Skybox_and_Skysphere.md  013_Sprite_Rendering_with_Compute.md  014_GLTF.md
site/generator/: .gitignore  Cargo.toml
site/generator/src/: diff.rs  main.rs
site/inserts/: navbar.html  sidebar.html
site/manim_scripts/: SDL_GPU_NDC.py  Triangle_Geometry.py
site/static_data/css/: bootstrap.css  simple-blog-template.css
site/template/: README.md  about.html  index_template.html  lesson_template.html  login.html  newpost.html  post_template.html
source/: CMakeLists.txt  main.c
source/001_Template/: CMakeLists.txt
source/002_Window_and_Clearing/: 002_Window_and_Clearing.c  CMakeLists.txt
