[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
extract-frontmatter = "4.1.1"
handlebars = "6.3.2"
markdown = "1.0.0"
natural-sort-rs = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
walkdir = "2.5.0"
yaml-rust = { version = "0.10", package = "yaml-rust2" }
zip = { version = "4.3.0", default-features = false, features = ["zstd"] }
