[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
extract-frontmatter = "4.1.1"
handlebars = "6.3.2"
html5ever = "0.35.0"
markdown = "1.0.0"
natural-sort-rs = "0.2.1"
pulldown-cmark = "0.13.0"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
similar = "2.7.0"
syntect = "5.2.0"
walkdir = "2.5.0"
yaml-rust = { version = "0.10", package = "yaml-rust2" }
zip = { version = "4.3.0", default-features = false, features = ["bzip2"] }
